# mwgc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/mywhoosh-to-garmin/: design.md  requirements.md  tasks.md
.kiro/specs/mywhoosh-to-garmin-gui/: design.md  requirements.md  tasks.md
docs/: stride-analysis.md
src/mwgc/: __main__.py  cli.py  config.py  core.py  devices.py  errors.py  fit_builder.py  gpx_parser.py  gui.py  history.py  models.py  prompter.py  uploader.py
tests/: manual_qa.md  test_cli.py  test_config.py  test_core.py  test_fit_builder.py  test_gpx_parser.py  test_gui.py  test_history.py  test_prompter.py  test_uploader.py
tests/fixtures/: sample_mywhoosh.gpx
