[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mwgc"
version = "0.1.0"
description = "Convert MyWhoosh GPX exports to Garmin FIT and upload to Garmin Connect."
requires-python = ">=3.11"
dependencies = [
    "gpxpy>=1.6,<2",
    "garminconnect>=0.3,<0.5",
    "fit-tool>=0.9,<1",
    "defusedxml>=0.7,<1",
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2,<6",
]
dev = [
    "pytest>=8.0,<10",
    "pytest-cov>=5.0,<8",
    "ruff>=0.5,<1",
    "pip-tools>=7.4",
    "customtkinter>=5.2,<6",
]

[project.scripts]
mwgc = "mwgc.cli:main"
mwgc-gui = "mwgc.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mwgc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
